syntax = "proto3";
package pc;

message Filter{
      double max_price_usd=1;
      uint32 min_cpu_cores=2;

    }